<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hederprivlyBackgroundColor"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/twHederText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_header_text"
            android:layout_marginTop="@dimen/margin_header_text"
            android:text="@string/hederText"
            android:textColor="@color/hederText"
            android:textSize="@dimen/font_size_header" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/enterBaseUrlHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:text="@string/baseUrlHeading"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/loginUnsure"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:text="@string/loginUnsure"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:text="@string/defaultContentServer"
            android:id="@+id/baseUrlEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/baseUrlHint"
            android:inputType="textUri" />
    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButtonLabel" />

</LinearLayout>